--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -14,6 +15,14 @@
         }
         h1, h2, h3, .serif {
             font-family: 'Playfair Display', serif;
+        }
+        @keyframes shake {
+          0%, 100% { transform: translateX(0); }
+          25% { transform: translateX(-5px); }
+          75% { transform: translateX(5px); }
+        }
+        .animate-shake {
+          animation: shake 0.2s ease-in-out infinite;
         }
         /* Estilos de impresión para el Menú PDF */
         @media print {
@@ -48,7 +57,6 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
 <body class="bg-zinc-950 text-zinc-100">
     <div id="root"></div>
