--- a/index.html
+++ b/index.html
@@ -5,52 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maral Restaurante | Buenos Aires</title>
-    <!-- Tailwind via CDN para estilos base rápidos -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            scroll-behavior: smooth;
-        }
-        h1, h2, h3, .serif {
-            font-family: 'Playfair Display', serif;
-        }
-        @keyframes shake {
-          0%, 100% { transform: translateX(0); }
-          25% { transform: translateX(-5px); }
-          75% { transform: translateX(5px); }
-        }
-        .animate-shake {
-          animation: shake 0.2s ease-in-out infinite;
-        }
-        /* Estilos de impresión para el Menú PDF */
+        body { font-family: 'Inter', sans-serif; scroll-behavior: smooth; }
+        h1, h2, h3, .serif { font-family: 'Playfair Display', serif; }
+        @keyframes shake { 0%, 100% { transform: translateX(0); } 25% { transform: translateX(-5px); } 75% { transform: translateX(5px); } }
+        .animate-shake { animation: shake 0.2s ease-in-out infinite; }
         @media print {
             .no-print { display: none !important; }
             body { background: white !important; color: black !important; }
-            #menu { 
-              background: white !important; 
-              padding: 0 !important; 
-              margin: 0 !important;
-            }
+            #menu { background: white !important; padding: 0 !important; margin: 0 !important; }
             .text-zinc-100, .text-zinc-400, .text-zinc-500 { color: black !important; }
             .text-amber-500 { color: #b45309 !important; }
-            .max-w-6xl { max-width: 100% !important; }
-            .grid { display: block !important; }
-            .group { 
-              margin-bottom: 2rem !important; 
-              page-break-inside: avoid;
-              border-bottom: 1px solid #eee;
-              padding-bottom: 1rem;
-            }
         }
     </style>
 <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.4/",
     "react": "https://esm.sh/react@^19.2.4",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "react/": "https://esm.sh/react@^19.2.4/",
     "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
     "vite": "https://esm.sh/vite@^7.3.1",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.3"
